# dumpling

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  cute_sound.h  data.c  data.h  graphic.c  graphic.h  main.c  main.h  rect.h  test_journal.txt  tigr.c  tigr.h  util.c  util.h
tests/: center_left_question.txt  click_mover_switch_pages.txt  hello.txt  hello_mover.txt
